[CALCITE-590] Update MongoDB test suite to calcite-test-dataset